src/objects/Class__c.object
<CustomObject>
    <description>This custom object is a singular instance (one to many) of the Course object.</description>
    <fields>
        <fullName>Abbreviated_Schedule__c</fullName>
        <label>Abbreviated Schedule</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>relAccountClasses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaRPT__c</fullName>
        <label>AreaRPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryRPT__c</fullName>
        <label>CategoryRPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Class_Location__c</fullName>
        <label>Class Location</label>
        <picklist>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midtown_Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Class_Title__c</fullName>
        <description>A system-maintained field that concatenates the class name, subtitle, section, and cycle number fields. Subtitle added 2/28/13 by MB.</description>
        <formula>Course__r.Name 
+ IF(ISNULL(Subtitle__c) ,&apos;&apos;, &apos; &apos; + Subtitle__c)
+ IF(ISNULL(text(Class_Location__c)),&apos;&apos;,&apos; - &apos;+text(Class_Location__c)) 
+ IF(ISNULL(First_Session_On__c) || Record_Type_RPT__c=&apos;Ongoing&apos;,&apos;&apos;, &apos; /&apos; + TEXT(First_Session_On__c)) 
+ IF(ISNULL(Program_Cycle__c), &apos;&apos;, &apos; /&apos; + TEXT(Program_Cycle__c))</formula>
        <label>Class Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>The Offering that this Course is related to.</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>relCourseClasses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Default_Ending_Session__c</fullName>
        <description>whether to enroll clients through their projected exit dates or through the end of the class, even if that is beyond their projected exit date.  Clients without a projected exit date are enrolled through the &quot;end of class&quot; or however many future sessions exist.</description>
        <label>Default Ending Session</label>
        <picklist>
            <picklistValues>
                <fullName>Sessions up to last Class date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sessions up to Client&apos;s projected exit date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single session only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Default_Starting_Session__c</fullName>
        <description>Sets focus in pick list depending on value selected.</description>
        <label>Default Starting Session</label>
        <picklist>
            <picklistValues>
                <fullName>First Session in Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Today or Next Future Session</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enroll_Referral_Only_New__c</fullName>
        <label>Enroll Referral Only</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enrollment_Limit_Start__c</fullName>
        <description>The number of sessions that may pass in a Class and clients may still be enrolled. This is the number of sessions displayed in the Enrollment Search screen&apos;s &quot;Starting Session&quot;.</description>
        <inlineHelpText>Leave empty if no limits on when students can be enrolled or if it is an ongoing class.</inlineHelpText>
        <label>Enrollment Limit Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extension_Days_to_Generate__c</fullName>
        <defaultValue>8</defaultValue>
        <description>This field will be used to extend and ongoing class by a set number of days</description>
        <label>Extension Days to Generate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Session_On__c</fullName>
        <description>A system-maintained field that displays the first session for this Class</description>
        <label>First Session On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest Instructor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Classes</relationshipLabel>
        <relationshipName>relContactClass</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hidden_On_Course_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden On Course Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A CEP staff member that will be the primary Instructor for this class.  This Instructor will also be whom the class appointments are assigned to.</description>
        <label>Instructor 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>relUserClass1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An additional Instructor for this class</description>
        <label>Instructor 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>relUserClass2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An additional Instructor for this class</description>
        <label>Instructor 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>relUserClass3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Session_On__c</fullName>
        <description>A system-maintained field that displays the last session for this Class</description>
        <label>Last Session On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Months_of_Sessions_to_Generate__c</fullName>
        <description>This field is used to initially (on creation) generate the sessions for ongoing classes only.  It will generate classes from the start date of the class the first time; so if the user enters 2 months, then it will be 2 months from the start date.</description>
        <label>Months of Sessions to Generate</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_of_Sessions_Scheduled__c</fullName>
        <description>A system-maintained field consisting of the count of Sessions for this Class</description>
        <label>No. of Sessions Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program_Cycle__c</fullName>
        <description>The Career Exploration Program Cycle Number</description>
        <label>Program Cycle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Programs_Served__c</fullName>
        <description>Youth program participants served by this course.</description>
        <inlineHelpText>Leave blank if all youth program clients can be enrolled in this class.</inlineHelpText>
        <label>Program(s) Served</label>
        <picklist>
            <picklistValues>
                <fullName>Adolescent Portable Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BX PEAK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCI START</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIRT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Court Screening (FCS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harlem Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice Scholars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manhattan Choices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non CEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens Justice Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervised Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_RPT__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type RPT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>The room that this Class will be held in</description>
        <label>Room</label>
        <picklist>
            <picklistValues>
                <fullName>601 - GirlsRising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>602 - Computer Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>603 - Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>606 - Training Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>607C - Literacy Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>608 - Career Ex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>609 - Art Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>610 - Rec Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>611 - Multimedia Room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>612 - Conference Room</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>A system-maintained field that displays the first session date for this class</description>
        <label>Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serves_All_Programs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if enrollment open to all programs</description>
        <inlineHelpText>Check if enrollment open to all programs</inlineHelpText>
        <label>Serves All Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <description>Enter a value to distinguish this class from others with the same course, such as &apos;Morning Session&quot;</description>
        <inlineHelpText>If there are two of the same course running at the same time, differentiate them with a subtitle, such as &quot;Morning Session&quot; or &quot;Exam Only&quot;. This will show up in the class title in the course catalog.</inlineHelpText>
        <label>Subtitle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Max_Size__c</fullName>
        <description>The suggested maximum number of students in a class.  This does NOT affect the enrollment of clients into the class; staff member has the option to over-enroll.</description>
        <label>Suggested Max Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Education_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AreaRPT__c</field>
            <operation>equals</operation>
            <value>Education</value>
        </filters>
        <label>Education Classes</label>
    </listViews>
    <listViews>
        <fullName>Employment_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Default_Ending_Session__c</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AreaRPT__c</field>
            <operation>equals</operation>
            <value>Employment</value>
        </filters>
        <label>Employment Classes</label>
    </listViews>
    <listViews>
        <fullName>Mandatory_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CategoryRPT__c</field>
            <operation>equals</operation>
            <value>Mandatory Class</value>
        </filters>
        <label>Mandatory Classes</label>
    </listViews>
    <listViews>
        <fullName>Mental_Health_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AreaRPT__c</field>
            <operation>equals</operation>
            <value>Mental Health</value>
        </filters>
        <label>Mental Health Classes</label>
    </listViews>
    <listViews>
        <fullName>Ongoing_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type_RPT__c</field>
            <operation>equals</operation>
            <value>Ongoing</value>
        </filters>
        <label>Ongoing Classes</label>
    </listViews>
    <listViews>
        <fullName>Pick_a_cycle</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program_Cycle__c</field>
            <operation>equals</operation>
            <value>69</value>
        </filters>
        <label>Pick a cycle</label>
    </listViews>
    <listViews>
        <fullName>SA_Classes</fullName>
        <columns>Class_Title__c</columns>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Program_Cycle__c</columns>
        <columns>First_Session_On__c</columns>
        <columns>Last_Session_On__c</columns>
        <columns>Instructor_1__c</columns>
        <columns>AreaRPT__c</columns>
        <columns>CategoryRPT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AreaRPT__c</field>
            <operation>equals</operation>
            <value>Substance Abuse</value>
        </filters>
        <label>SA Classes</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Class Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <recordTypes>
        <fullName>Fixed</fullName>
        <active>true</active>
        <description>A fixed series of a Class</description>
        <label>Fixed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ongoing</fullName>
        <active>true</active>
        <description>An ongoing instance of a Class</description>
        <label>Ongoing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Single</fullName>
        <active>true</active>
        <description>A single instance of a Class</description>
        <label>Single</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Programs_Served_Selection</fullName>
        <active>true</active>
        <description>If &quot;Serves All Programs&quot; is checked, &quot;Programs Served&quot; may not have any values selected (vice versa too-implemented 10/22/13 MB)</description>
        <errorConditionFormula>or(

and(Serves_All_Programs__c , NOT(ISBLANK(Programs_Served__c))), 

and(not(Serves_All_Programs__c), isblank(Programs_Served__c))
)</errorConditionFormula>
        <errorDisplayField>Serves_All_Programs__c</errorDisplayField>
        <errorMessage>You must either check off &quot;Serves All Programs&quot;, or select specific programs from the list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referrals_only_available_for_CareerEx</fullName>
        <active>true</active>
        <errorConditionFormula>and(
ispickval(Enroll_Referral_Only_New__c, &quot;Yes&quot;),
CategoryRPT__c != &apos;Career Exploration Training&apos;
)</errorConditionFormula>
        <errorDisplayField>Enroll_Referral_Only_New__c</errorDisplayField>
        <errorMessage>You can only specify Referrals for Career Exploration - Training classes.</errorMessage>
    </validationRules>
</CustomObject>